--- a/src/app/business/business-card/business-card.component.css
+++ b/src/app/business/business-card/business-card.component.css
@@ -2,7 +2,41 @@ h1 {
   font-weight: normal;
 }
 
-.propImg {
-  height: 200px;
-  width: 200px;
+.card-img-wrapper{
+  overflow: hidden;
+  position: relative;
+}
+
+.card:hover img{
+  transform: scale(1.1,1.1);
+  transition-duration: 500ms;
+  transition-timing-function: ease-out;
+  height: 210px;
+  opacity: .7;
+}
+
+.card img{
+  transform: scale(1,1);
+  transition-duration: 500ms;
+  transition-timing-function: ease-out;
+  height: 210px;
+}
+
+.member-icons{
+  position: absolute;
+  bottom: -10%;
+  left: 0;
+  right: 0;
+  margin-right: auto;
+  margin-left: auto;
+  opacity: 0;
+}
+
+.card-img-wrapper:hover .member-icons {
+  bottom: 0%;
+  opacity: 1;
+}
+
+.animate{
+  transition: all 0.3s ease-in-out;
 }
