--- a/src/app/business/business-card/business-card.component.html
+++ b/src/app/business/business-card/business-card.component.html
@@ -1,6 +1,6 @@
 
 <div class="card">
-  <div class="card-img-wrapper">
+  <div class="card-img-wrapper" routerLink="/business-details/{{business.Id}}">
     <img class="card-img-top" src="assets/img/RestaurantDefault.png">
     <ul class="list-inline-item text-center member-icons animate">
       <li class="list-inline-item">
