--- a/src/app/business/Business-detail/Business-detail.component.html
+++ b/src/app/business/Business-detail/Business-detail.component.html
@@ -1,7 +1,6 @@
-<p>
-  Business-detail works!
-  Selected business id is {{businessId}}
-  <br/> <br/>
+
+<h1>Restaurante {{businessId}}</h1>
 
   <button (click)="onOpenReview" class="btn btn-primary">Add Review</button>
-</p>
+
+
