--- a/src/app/business/business-card/business-card.component.html
+++ b/src/app/business/business-card/business-card.component.html
@@ -1,7 +1,8 @@
 
 <div class="card">
   <div class="card-img-wrapper" routerLink="/business-details/{{business.Id}}">
-    <img class="card-img-top" src="assets/img/RestaurantDefault.png">
+    <img *ngIf="business.Image" class="card-img-top" src="assets/img/{{business.Image}}.png">
+    <img *ngIf="!business.Image" class="card-img-top" src="assets/img/RestaurantDefault.png">
     <ul class="list-inline-item text-center member-icons animate">
       <li class="list-inline-item">
         <button class="btn btn-primary"><i class="fa-solid fa-pen-to-square"></i></button>
