--- a/src/app/business/business-review/business-review.component.html
+++ b/src/app/business/business-review/business-review.component.html
@@ -1,3 +1,32 @@
-<p>
-  business-review works!
-</p>
+<div class="card">
+  <div class="card-header">
+    Review
+  </div>
+  <div class="card-body">
+    <form (ngSubmit)='onSubmit(Form)' #Form="ngForm">
+      <div class="form-group col-12">
+        <label for="rating">Avalição:</label>
+        <br>
+        <span class="star-rating">
+          <input type="radio" name="rating1" value="1"><i></i>
+          <input type="radio" name="rating1" value="2"><i></i>
+          <input type="radio" name="rating1" value="3"><i></i>
+          <input type="radio" name="rating1" value="4"><i></i>
+          <input type="radio" name="rating1" value="5"><i></i>
+        </span>
+      </div>
+
+      <div class="clear"></div>
+      <hr class="survey-hr">
+    <label for="m_3189847521540640526commentText">Opinião:</label><br/><br/>
+    <textarea cols="75" name="commentText" rows="5"></textarea><br>
+    <br>
+      <div class="form-group col-12">
+        <button type="submit" class="btn btn-primary mr-4">Save</button>
+        <button type="reset" class="btn btn-primary mr-4">Cancel</button>
+      </div>
+    </form>
+
+  </div>
+
+</div>
