--- a/src/app/business/Business-detail/Business-detail.component.html
+++ b/src/app/business/Business-detail/Business-detail.component.html
@@ -1,6 +1,6 @@
 
 <h1>Restaurante {{businessId}}</h1>
 
-  <button (click)="onOpenReview" class="btn btn-primary">Add Review</button>
+  <button (click)="onOpenReview()" class="btn btn-primary">Add Review</button>
 
 
