--- a/src/app/business/business-review/business-review.component.html
+++ b/src/app/business/business-review/business-review.component.html
@@ -8,22 +8,22 @@
         <label for="rating">Avalição:</label>
         <br>
         <span class="star-rating">
-          <input type="radio" name="rating1" value="1"><i></i>
-          <input type="radio" name="rating1" value="2"><i></i>
-          <input type="radio" name="rating1" value="3"><i></i>
-          <input type="radio" name="rating1" value="4"><i></i>
-          <input type="radio" name="rating1" value="5"><i></i>
+          <input type="radio" name="rating1" value="1" ngModel name="rating"><i></i>
+          <input type="radio" name="rating1" value="2" ngModel name="rating"><i></i>
+          <input type="radio" name="rating1" value="3" ngModel name="rating"><i></i>
+          <input type="radio" name="rating1" value="4" ngModel name="rating"><i></i>
+          <input type="radio" name="rating1" value="5" ngModel name="rating"><i></i>
         </span>
       </div>
 
       <div class="clear"></div>
       <hr class="survey-hr">
     <label for="m_3189847521540640526commentText">Opinião:</label><br/><br/>
-    <textarea cols="75" name="commentText" rows="5"></textarea><br>
+    <textarea cols="75" name="commentText" rows="5" ngModel name="opinion"></textarea><br>
     <br>
       <div class="form-group col-12">
-        <button type="submit" class="btn btn-primary mr-4">Save</button>
-        <button type="reset" class="btn btn-primary mr-4">Cancel</button>
+        <button [disabled]="!Form.valid" type="submit" class="btn btn-primary mr-4" routerLink="/business">Save</button>
+        <button type="reset" class="btn btn-primary mr-4" routerLink="/business">Cancel</button>
       </div>
     </form>
 
